crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__captured_original.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#1 : Data = (con data (I 42)) in
force (delay (case@Data data#1 of
  DataI payload#2 -> payload#2))
--- unoptimized UPLC
(program 1.1.0
  [(lam data_1
    (force
      (delay
        [(lam generated_3
          (force
            [[[[[[(force (builtin chooseData)) generated_3] (delay (error))] (delay (error))]
              (delay (error))]
              (delay [(lam payload_2 payload_2) [(builtin unIData) generated_3]])]
              (delay (error))]))
          data_1])))
    (con data (I 42))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- isolated ANF input
let data#1 : Data = (con data (I 42)) in
force (delay (case@Data data#1 of
  DataI payload#2 -> payload#2))
--- isolated folded Core
let data_payload#3 : int = 42 in
let data#1 : Data = (con data (I 42)) in
force (delay (let payload#2 : int = data_payload#3 in
payload#2))
--- isolated cleaned Core
42
--- isolated UPLC before
(program 1.1.0
  [(lam data_1
    (force
      (delay
        [(lam generated_3
          (force
            [[[[[[(force (builtin chooseData)) generated_3] (delay (error))] (delay (error))]
              (delay (error))]
              (delay [(lam payload_2 payload_2) [(builtin unIData) generated_3]])]
              (delay (error))]))
          data_1])))
    (con data (I 42))])
--- isolated UPLC after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
