crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__complete_bytes.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (B #6e617368)) of
  DataI unused#6 -> trace "bytes" in 0
  DataB unused#7 -> trace "bytes" in 1
  DataList unused#8 -> trace "bytes" in 2
  DataMap unused#9 -> trace "bytes" in 4
  DataConstr unused#10 -> trace "bytes" in 6
  _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_11
    (force
      [[[[[[(force (builtin chooseData)) generated_11]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 6))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 4))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 2))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 0))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 1))]))]))
    (con data (B #6e617368))])
--- optimized Core
trace "bytes" in 1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "bytes")] (delay (con integer 1))]))
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (B #6e617368)) of
  DataI unused#6 -> trace "bytes" in 0
  DataB unused#7 -> trace "bytes" in 1
  DataList unused#8 -> trace "bytes" in 2
  DataMap unused#9 -> trace "bytes" in 4
  DataConstr unused#10 -> trace "bytes" in 6
  _ -> error
--- isolated folded Core
let unused#7 : bytes = (con bytestring #6e617368) in
trace "bytes" in 1
--- isolated cleaned Core
trace "bytes" in 1
--- isolated UPLC before
(program 1.1.0
  [(lam generated_11
    (force
      [[[[[[(force (builtin chooseData)) generated_11]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 6))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 4))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 2))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 0))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 1))]))]))
    (con data (B #6e617368))])
--- isolated UPLC after
(program 1.1.0
  (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 1))]))
--- result
(con integer 1)
--- logs
["bytes"]
