crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__complete_constr.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (Constr 122 [I 42])) of
  DataI unused#36 -> trace "constr" in 0
  DataB unused#37 -> trace "constr" in 1
  DataList unused#38 -> trace "constr" in 2
  DataMap unused#39 -> trace "constr" in 4
  DataConstr unused#40 -> trace "constr" in 6
  _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_41
    (force
      [[[[[[(force (builtin chooseData)) generated_41]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 1))]))]))
    (con data (Constr 122 [I 42]))])
--- optimized Core
trace "constr" in 6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "constr")] (delay (con integer 6))]))
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (Constr 122 [I 42])) of
  DataI unused#36 -> trace "constr" in 0
  DataB unused#37 -> trace "constr" in 1
  DataList unused#38 -> trace "constr" in 2
  DataMap unused#39 -> trace "constr" in 4
  DataConstr unused#40 -> trace "constr" in 6
  _ -> error
--- isolated folded Core
let unused#40 : pair int (list Data) = (con (pair integer (list data)) (122, [(I 42)])) in
trace "constr" in 6
--- isolated cleaned Core
trace "constr" in 6
--- isolated UPLC before
(program 1.1.0
  [(lam generated_41
    (force
      [[[[[[(force (builtin chooseData)) generated_41]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "constr")] (delay (con integer 1))]))]))
    (con data (Constr 122 [I 42]))])
--- isolated UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "constr")] (delay (con integer 6))]))
--- result
(con integer 6)
--- logs
["constr"]
