crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__complete_empty_list.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (List [])) of
  DataI unused#11 -> trace "empty_list" in 0
  DataB unused#12 -> trace "empty_list" in 1
  DataList unused#13 -> trace "empty_list" in 2
  DataMap unused#14 -> trace "empty_list" in 4
  DataConstr unused#15 -> trace "empty_list" in 6
  _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_16
    (force
      [[[[[[(force (builtin chooseData)) generated_16]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 1))]))]))
    (con data (List []))])
--- optimized Core
trace "empty_list" in 2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "empty_list")] (delay (con integer 2))]))
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (List [])) of
  DataI unused#11 -> trace "empty_list" in 0
  DataB unused#12 -> trace "empty_list" in 1
  DataList unused#13 -> trace "empty_list" in 2
  DataMap unused#14 -> trace "empty_list" in 4
  DataConstr unused#15 -> trace "empty_list" in 6
  _ -> error
--- isolated folded Core
let unused#13 : list Data = (con (list data) []) in
trace "empty_list" in 2
--- isolated cleaned Core
trace "empty_list" in 2
--- isolated UPLC before
(program 1.1.0
  [(lam generated_16
    (force
      [[[[[[(force (builtin chooseData)) generated_16]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 1))]))]))
    (con data (List []))])
--- isolated UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "empty_list")] (delay (con integer 2))]))
--- result
(con integer 2)
--- logs
["empty_list"]
