crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__complete_integer.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (I 42)) of
  DataI unused#1 -> trace "integer" in 0
  DataB unused#2 -> trace "integer" in 1
  DataList unused#3 -> trace "integer" in 2
  DataMap unused#4 -> trace "integer" in 4
  DataConstr unused#5 -> trace "integer" in 6
  _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_6
    (force
      [[[[[[(force (builtin chooseData)) generated_6]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 1))]))]))
    (con data (I 42))])
--- optimized Core
case@Data (con data (I 42)) of
  DataI unused#6 -> trace "integer" in 0
  DataB unused#7 -> trace "integer" in 1
  DataList unused#8 -> trace "integer" in 2
  DataMap unused#9 -> trace "integer" in 4
  DataConstr unused#10 -> trace "integer" in 6
  _ -> error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam builtin_8
      [(lam partial_9
        [(lam generated_6
          (force
            [[[[[[builtin_8 generated_6] (delay (force [partial_9 (delay (con integer 6))]))]
              (delay (force [partial_9 (delay (con integer 4))]))]
              (delay (force [partial_9 (delay (con integer 2))]))]
              (delay (force [partial_9 (delay (con integer 0))]))]
              (delay (force [partial_9 (delay (con integer 1))]))]))
          (con data (I 42))])
        [builtin_7 (con string "integer")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (I 42)) of
  DataI unused#1 -> trace "integer" in 0
  DataB unused#2 -> trace "integer" in 1
  DataList unused#3 -> trace "integer" in 2
  DataMap unused#4 -> trace "integer" in 4
  DataConstr unused#5 -> trace "integer" in 6
  _ -> error
--- isolated folded Core
let unused#1 : int = 42 in
trace "integer" in 0
--- isolated cleaned Core
trace "integer" in 0
--- isolated UPLC before
(program 1.1.0
  [(lam generated_6
    (force
      [[[[[[(force (builtin chooseData)) generated_6]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "integer")] (delay (con integer 1))]))]))
    (con data (I 42))])
--- isolated UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "integer")] (delay (con integer 0))]))
--- result
(con integer 0)
--- logs
["integer"]
