crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__complete_map.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (Map [(I 42, I 42), (I 42, I 9)])) of
  DataI unused#26 -> trace "map" in 0
  DataB unused#27 -> trace "map" in 1
  DataList unused#28 -> trace "map" in 2
  DataMap unused#29 -> trace "map" in 4
  DataConstr unused#30 -> trace "map" in 6
  _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_31
    (force
      [[[[[[(force (builtin chooseData)) generated_31]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 6))]))]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 4))]))]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 2))]))]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 0))]))]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 1))]))]))
    (con data (Map [(I 42, I 42), (I 42, I 9)]))])
--- optimized Core
case@Data (con data (Map [(I 42, I 42), (I 42, I 9)])) of
  DataI unused#1 -> trace "map" in 0
  DataB unused#2 -> trace "map" in 1
  DataList unused#3 -> trace "map" in 2
  DataMap unused#4 -> trace "map" in 4
  DataConstr unused#5 -> trace "map" in 6
  _ -> error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam builtin_13
      [(lam partial_14
        [(lam generated_11
          (force
            [[[[[[builtin_13 generated_11] (delay (force [partial_14 (delay (con integer 6))]))]
              (delay (force [partial_14 (delay (con integer 4))]))]
              (delay (force [partial_14 (delay (con integer 2))]))]
              (delay (force [partial_14 (delay (con integer 0))]))]
              (delay (force [partial_14 (delay (con integer 1))]))]))
          (con data (Map [(I 42, I 42), (I 42, I 9)]))])
        [builtin_12 (con string "map")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (Map [(I 42, I 42), (I 42, I 9)])) of
  DataI unused#26 -> trace "map" in 0
  DataB unused#27 -> trace "map" in 1
  DataList unused#28 -> trace "map" in 2
  DataMap unused#29 -> trace "map" in 4
  DataConstr unused#30 -> trace "map" in 6
  _ -> error
--- isolated folded Core
let unused#29 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 42)), ((I 42), (I 9))]) in
trace "map" in 4
--- isolated cleaned Core
trace "map" in 4
--- isolated UPLC before
(program 1.1.0
  [(lam generated_31
    (force
      [[[[[[(force (builtin chooseData)) generated_31]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 6))]))]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 4))]))]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 2))]))]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 0))]))]
        (delay
          (force [[(force (builtin trace)) (con string "map")] (delay (con integer 1))]))]))
    (con data (Map [(I 42, I 42), (I 42, I 9)]))])
--- isolated UPLC after
(program 1.1.0
  (force [[(force (builtin trace)) (con string "map")] (delay (con integer 4))]))
--- result
(con integer 4)
--- logs
["map"]
